# evg-module-manager

./: .emm-local.yml  .gitignore  404.html  CHANGELOG.md  README.md  evergreen.yml  index.html  index.xml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  test.yml
categories/: index.html  index.xml
categories/page/1/: index.html
docs/: usage.md
emm-docs/: config.toml
emm-docs/content/: _index.md
getting-started/: index.html  index.xml
getting-started/getting-help/: index.html
getting-started/global-options/: index.html
getting-started/installation/: index.html
project-history/: index.html  index.xml
project-history/CHANGELOG/: index.html
search/: en.config.min.json  en.data.min.json
src/emm/: emm_cli.py  options.py
src/evergreen/: activate_venv.sh  prelude_python.sh
src/evergreen_dir/: activate_venv.sh  venv_setup.sh
subcommands/: index.html  index.xml
subcommands/commit-queue/: index.html
subcommands/create-branch/: index.html
subcommands/disable/: index.html
subcommands/enable/: index.html
subcommands/evg-commit-queue/: index.html
subcommands/evg-patch/: index.html
subcommands/git-add/: index.html
subcommands/git-branch-create/: index.html
subcommands/git-branch-delete/: index.html
subcommands/git-branch-pull/: index.html
subcommands/git-branch-show/: index.html
subcommands/git-branch-switch/: index.html
subcommands/git-branch-update/: index.html
subcommands/git-commit/: index.html
subcommands/git-restore/: index.html
subcommands/git-status/: index.html
subcommands/list-modules/: index.html
subcommands/patch/: index.html
subcommands/pull-request/: index.html
subcommands/save-local-config/: index.html
tags/: index.html  index.xml
tests/emm/: test_emm_cli.py
workflows/: index.html  index.xml
workflows/cleaning-up/: index.html
workflows/creating-pull-requests/: index.html
workflows/project-setup/: index.html
(+66 files in other folders)
